# aww-agent

./: .env.example  .gitignore  README.md  SPEC.md  debug_agent_stream.py  debug_stream.py  pyproject.toml
agent/: __init__.py  config.py  exceptions.py
agent/adapters/: anthropic.py  base.py  openai.py
agent/core/: content.py  events.py  messages.py  types.py
agent/loop/: runner.py
agent/tools/: __init__.py  base.py  executor.py
agent/ui/: __init__.py  console.py
example/: adapter_factory.py  console.py  simple.py
tests/: test_messages.py  test_tools.py
